--- a/package.json
+++ b/package.json
@@ -10,16 +10,26 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
-    "@mui/material": "^6.1.0",
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
+    "@hookform/resolvers": "^3.9.1",
+    "@mui/material": "^6.1.8",
+    "@mui/x-date-pickers": "^7.22.3",
+    "@tanstack/react-query": "^5.61.0",
+    "@tanstack/react-query-devtools": "^5.61.0",
+    "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "dayjs": "^1.11.13",
+    "deepface-ui": "file:",
     "fine-uploader": "^5.16.2",
+    "notistack": "^3.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-dropzone": "^14.2.3",
+    "react-dropzone": "^14.3.5",
     "react-dropzone-uploader": "^2.11.0",
-    "react-router-dom": "^6.26.2"
+    "react-hook-form": "^7.53.2",
+    "react-router-dom": "^6.26.2",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
